--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
       run: npm install --global surge
       
     - name: Run Surge
-      run: surge ./build project-3-bootcamp.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build project-3-bootcamp.surge.sh --token ${{secrets.BOOTCAMP_3}}
